Fix chart size
Set chart size through options, which fixes the chart being squashed vertically.

--- a/frontend/client/style/style.scss
+++ b/frontend/client/style/style.scss
@@ -2020,15 +2020,6 @@ span.loading-icon {
 }
 
 /* MARKET CHART */
-#market-chart-depth {
- max-width: 375px!important;
- max-height: 195px!important;
-}
-
-#market-chart-volume {
-  max-width: 375px!important;
-  max-height: 195px!important;
-}
 .loading-depth-chart, .loading-volume-chart {
   width: 440px;
   height: 235px;
